# DB-Lynx

backend/: .gitignore  GEMINI.md  Makefile  app.db  main.py  pyproject.toml
backend/db-management/: config.json
backend/db-management/migrations/: 20251116180954_databases.down.sql  20251116180954_databases.up.sql
backend/migrations/: 20251108_01_r9NNN-databases-table.py  20251110_02_change_database_servers.py
backend/src/api/: __init__.py  health_check.py
backend/src/api/database_server/: __init__.py  create.py  delete.py  get.py  list.py  update.py
backend/src/classes/: __init__.py  database.py
backend/src/classes/database_dialect/: __init__.py  base.py  postgresql.py
backend/src/enums/: __init__.py  database_dialects.py
backend/src/events/: __init__.py
backend/src/models/: __init__.py  database_server.py
backend/src/utils/: __init__.py  app_db.py
ui/: .env  pubspec.yaml
ui/lib/: main.dart
ui/lib/providers/: backend_provider.dart  requests.dart
ui/lib/screens/: loading.dart
ui/lib/widgets/: app_menu_bar.dart
